--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<section id="title">
 			<div class="container-fluid">
 				<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-					<a class="navbar-brand" href=""><img src="images/falcon_sys_logo.png" class="navbar-logo">Falcon System Commercial Co</a>
+					<a class="navbar-brand" href=""><img src="images/falcon_sys_logo.jpg" class="navbar-logo">Falcon System Commercial Co</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle Navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
@@ -121,7 +121,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="owner-image">
-							<img src="images/sayeed_yahya.png" class="owner-image-style">
+							<img src="images/sayeed_yahya.jpg" class="owner-image-style">
 							<p class="owner-image-text">Sayeed Yahya Alzahrani, Entrepreneur</p>
 						</div>
 					</div>
