--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							<em>Falcon System</em> is a Global Partner to new, upcoming and existing business ventures.
 						</p>
 						<p>
-							Our bench-mark trading evolves around the principal of <em>Quick Response, Worldwide Sourcing, Prompt Deliveries with Supervisory Services for Installation and Commissioning;</em> and an ever efficient salses services thereafter	
+							Our bench-mark trading evolves around the principal of <em>Quick Response, Worldwide Sourcing, Prompt Deliveries with Supervisory Services for Installation and Commissioning;</em> and an ever efficient sales services thereafter	
 						</p>
 						<p>
 							Our inventory portfolio is largely complimented by a range of associated products, and hence a trading platform for procurement, sourcing and sales is further consolidated, visà-vis in creating a “One-Stop” Sales and Services at <em>Falcon System</em> for a gamut of high end products targeted at an entire industrial market sector
