--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							<p class="owner-image-text">Sayeed Yahya Alzahrani, Entrepreneur</p>
 							<div>
 								<form method="get" action="FALCON PROFILE_A.pdf">
-									<button id="brochure-download-button" type="submit" class="btn btn-outline-dark btn-lg">Download Product Brochure <i class="fas fa-download"></i></button>
+									<button id="brochure-download-button" type="submit" class="btn btn-outline-dark btn-lg">Download Product Brochure <i class="fas fa-file-download"></i></button>
 								</form>
 							</div>
 						</div>
