--- a/index.html
+++ b/index.html
@@ -706,13 +706,12 @@
 					<div id="collapseItServices" class="collapse" aria-labelledby="itServices" data-parent="#services-accordion">
 						<div class="card-body">
 							<table class="table table-hover table-sm it-and-networking-services-table">
-								<tr><td class="first-cell">Lighting Systems</td></tr>
-								<tr><td>UPS / Battery / Battery Charger</td></tr>
-								<tr><td>Power Factor Correction</td></tr>
-								<tr><td>Isolation Power System</td></tr>
-								<tr><td>Medium Voltage Equipment up to 33 KV such as Switchgears, Package Substations Transformers</td></tr>
-								<tr><td>All Low Voltage, Medium Voltage Cables Including all Cable Trays, Supports, Cable Ties, Cable Tagging, etc</td></tr>
-								<tr><td> Installation of the Power Houses using Diesel Generators High Speed, Medium Speed, Gas Turbine, Steam Turbine, M.V. work up to 33 KV</td></tr>
+								<tr><td class="first-cell">Security Systems</td></tr>
+								<tr><td>CCTV Cabling and Storage</td></tr>
+								<tr><td>Server Management</td></tr>
+								<tr><td>Data Mining</td></tr>
+								<tr><td>Firewall</td></tr>
+								<tr><td>Intra Building Wifi and Internet (LAN)</td></tr>
 							</table>
 						</div>
 					</div>	
