--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		
-		<!-- BOOTSTRAP 4 (No INTERNET Version) -->
-		<link rel="stylesheet" type="text/css" href="bootstrap-4.5.3/dist/css/bootstrap.css">
-		
 		<link rel="stylesheet" href="css/styles.css">
 		
 		<script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
@@ -179,10 +176,6 @@
 						<p>
 							Our inventory portfolio is largely complimented by a range of associated products, and hence a trading platform for procurement, sourcing and sales is further consolidated, visà-vis in creating a “One-Stop” Sales and Services at <em>Falcon System</em> for a gamut of high end products targeted at an entire industrial market sector
 						</p>
-
-						<!-- <p>
-							The range of goods sourced and supplied encompass the fields of Electrical, Mechanical & Instrumentation Engineering, other technical products from as diverse a field as Safety Equipments, Fire Fighting Products, Telecommunications, Industrial Automation, Building Materials (for Construction Industry) Medical Equipments & Logistic Support can also be sourced and supplied albeit on demand and request from clients
-						</p> -->
 					</div>
 					
 				</div>	
@@ -384,44 +377,7 @@
 	        				</div>
 	        			</div>
 	        		</div>
-	        		<!-- <div class="carousel-item item-7">
-	          			<div class="row">
-	        				<div class="col-lg-6">
-	        					<h2 class="product-carousel-text">Mechanical Services and Spares</h2>
-	        				</div>
-	        				<div class="col-lg-6">
-	        					<table class="table table-hover table-dark table-sm item-7-table">
-									<tr><td class="first-cell">A/C Systems including Central Air Conditioning using Split Duct, Package Chillers and ALL related works such as Ducting, Grills, Attenuators, Piping, etc.</td></tr>
-									<tr><td>Fuel, Water Systems Including all Valves, Solenoid Valves, Float Switches, Level Sensors, Flow Meters </td></tr>
-									<tr><td>Compressors and All Accessories such as Receivers, Dryers, Separators.</td></tr>
-									<tr><td>Secondary Filters and Water Separators</td></tr> 
-									<tr><td>Sound Treatment Systems including Sound Attenuators, Acoustic Louvers, Acoustic Doors</td></tr>
-									<tr><td>Sound Treatment for the Power Houses and All Very Noisy Equipment including Installation of Sound Attenuators and Sound Treatment Linings for the Walls</td></tr>
-									<tr><td>Waste Water Treatment Plants</td></tr>
-									<tr><td>Power Houses including Diesel, Gas Generating Sets, Gas Turbines, Steam Turbines including All related Mechanical Works such as Boilers, Piping Work, Heat Insulations for the Exhaust Piping, Measuring Equipment</td></tr>
-									<tr><td>Production Lines for All Applications in Industrial, Petroleum Sectors including all Steel Frames.</td></tr>
-								</table>
-	        				</div>
-	        			</div>
-	        		</div>
-	        		<div class="carousel-item item-8">
-	          			<div class="row">
-	        				<div class="col-lg-6">
-	        					<h2 class="product-carousel-text">Electrical Services and Spares</h2>
-	        				</div>
-	        				<div class="col-lg-6">
-	        					<table class="table table-hover table-sm item-8-table">
-									<tr><td class="first-cell">Lighting Systems</td></tr>
-									<tr><td>UPS / Battery / Battery Charger</td></tr>
-									<tr><td>Power Factor Correction</td></tr>
-									<tr><td>Isolation Power System</td></tr>
-									<tr><td>Medium Voltage Equipment up to 33 KV such as Switchgears, Package Substations Transformers</td></tr>
-									<tr><td>All Low Voltage, Medium Voltage Cables Including all Cable Trays, Supports, Cable Ties, Cable Tagging, etc</td></tr>
-									<tr><td> Installation of the Power Houses using Diesel Generators High Speed, Medium Speed, Gas Turbine, Steam Turbine, M.V. work up to 33 KV</td></tr>
-								</table>	
-	        				</div>
-	        			</div>
-	        		</div> -->
+	 
 	      		</div>	
 	      		<a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
 	        		<span class="carousel-control-prev-icon carousel-control-icon" aria-hidden="true"></span>
@@ -772,57 +728,6 @@
 		
 
 		<section id="utilities">
-
-			<!-- <nav id="utility-menu">
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-			</nav> -->
 			<div class="row utility-menu">
 				<div class="col-lg-3 utility-menu-button-list">
 					<button id="activate-pipe-calculator" type="button" id="pipe-calculator-button" class="btn btn-outline-light active utility-menu-button">Pipe Calculator</button>
@@ -927,37 +832,6 @@
 												<option value="34">44</option>
 												<option value="35">46</option>
 												<option value="36">48</option>
-												<!-- <option value="37">50</option>
-												<option value="38">52</option>
-												<option value="39">54</option>
-												<option value="40">56</option>
-												<option value="41">58</option>
-												<option value="42">60</option>
-												<option value="43">62</option>
-												<option value="44">64</option>
-												<option value="45">66</option>
-												<option value="46">68</option>
-												<option value="47">70</option>
-												<option value="48">72</option>
-												<option value="49">74</option>
-												<option value="50">76</option>
-												<option value="51">78</option>
-												<option value="52">80</option>
-												<option value="53">82</option>
-												<option value="54">84</option>
-												<option value="55">86</option>
-												<option value="56">88</option>
-												<option value="57">90</option>
-												<option value="58">92</option>
-												<option value="59">94</option>
-												<option value="60">96</option>
-												<option value="61">98</option>
-												<option value="62">100</option>
-												<option value="63">102</option>
-												<option value="64">104</option>
-												<option value="65">106</option>
-												<option value="66">108</option>
-												<option value="67">110</option> -->
 											</select>
 										</div>
 									</div>
@@ -1241,13 +1115,9 @@
 		<footer id="footer">
 			Copyright © 2020 Falcon System Commercial Co | Website Designer & Developer - Aymen Sheikh
 		</footer>
-
-
-		<script type="text/javascript" src="jquery-3.5.1.js"></script>
-		<script type="text/javascript" src="bootstrap-4.5.3/dist/js/bootstrap.bundle.js"></script>		
-
-		<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-    	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
+		
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
