--- a/about_us.html
+++ b/about_us.html
@@ -8,15 +8,12 @@
 		<link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@400;500;700;900&family=Rakkas&display=swap" rel="stylesheet">
 		
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-		
-		<!-- BOOTSTRAP 4 (No INTERNET Version) -->
-		<link rel="stylesheet" type="text/css" href="bootstrap-4.5.3/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">	
 		
 		<link rel="stylesheet" href="css/styles.css">
 		
-		<!-- <script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+		<script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		
 		<!-- Font Awesome (No INTERNET Version)-->
   		<link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
@@ -62,17 +59,6 @@
 									<a id="goto-it-and-networking-services" class="dropdown-item" href="#power-and-fuel-services">IT and Networking Services</a>
 								</div>
 							</li>
-
-							<!-- <li class="nav-item btn-group">
-								<a class="nav-link navbar-dropdown-link" href="#our-services-accordion" title="">Services</a>
-								<button type="button" class="nav-link btn dropdown-toggle dropdown-toggle-split dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-								<div class="dropdown-menu">
-									<a id="goto-mechanical-services" class="dropdown-item" href="#our-services-accordion">Mechanical Services</a>
-									<a id="goto-electrical-services" class="dropdown-item" href="#mechanical-services">Electrical Services</a>
-									<a id="goto-power-and-fuel-services" class="dropdown-item" href="#electrical-services">Power and Fuel Services</a>
-									<a id="goto-it-and-networking-services" class="dropdown-item" href="#power-and-fuel-services">IT and Networking Services</a>
-								</div>
-							</li> -->
 							<li class="nav-item">
 								<a class="nav-link" href="utilities.html" title="">Utilities</a>
 							</li>
@@ -114,10 +100,6 @@
 						<p class="fade">
 							Our inventory portfolio is largely complimented by a range of associated products, and hence a trading platform for procurement, sourcing and sales is further consolidated, visà-vis in creating a “One-Stop” Sales and Services at <em>Falcon System</em> for a gamut of high end products targeted at an entire industrial market sector
 						</p>
-
-						<!-- <p>
-							The range of goods sourced and supplied encompass the fields of Electrical, Mechanical & Instrumentation Engineering, other technical products from as diverse a field as Safety Equipments, Fire Fighting Products, Telecommunications, Industrial Automation, Building Materials (for Construction Industry) Medical Equipments & Logistic Support can also be sourced and supplied albeit on demand and request from clients
-						</p> -->
 					</div>
 					
 				</div>	
@@ -173,17 +155,6 @@
 						<li><a href=""><i class="fab fa-youtube contact-us-icon"></i></a></li>
 					</ul>					
 				</div>
-				<!-- <div class="sec quicklinks">
-					<h2>Quick Links</h2>
-					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Products</a></li>
-						<li><a href="">Services</a></li>
-						<li><a href="">Utilities</a></li>
-
-					</ul>
-				</div> -->
 				<div class="sec contactus">
 					<h2>We're Available At</h2>
 					<ul class="info">
@@ -217,11 +188,8 @@
 		</div>
 
 
-		<script type="text/javascript" src="jquery-3.5.1.js"></script>
-		<script type="text/javascript" src="bootstrap-4.5.3/dist/js/bootstrap.bundle.js"></script>		
-
-		<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-    	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 
