--- a/products_and_services.html
+++ b/products_and_services.html
@@ -10,15 +10,9 @@
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		
-		<!-- BOOTSTRAP 4 (No INTERNET Version) -->
-		<link rel="stylesheet" type="text/css" href="bootstrap-4.5.3/dist/css/bootstrap.css">
-		
 		<link rel="stylesheet" href="css/styles.css">
 		
 		<script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
-		
-		<!-- Font Awesome (No INTERNET Version)-->
-  		<link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
 	</head>
 	<body>
 		<section id="title">
@@ -62,17 +56,6 @@
 
 								</div>
 							</li>
-
-							<!-- <li class="nav-item btn-group">
-								<a class="nav-link navbar-dropdown-link" href="#our-services-accordion" title="">Services</a>
-								<button type="button" class="nav-link btn dropdown-toggle dropdown-toggle-split dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-								<div class="dropdown-menu">
-									<a id="goto-mechanical-services" class="dropdown-item" href="#our-services-accordion">Mechanical Services</a>
-									<a id="goto-electrical-services" class="dropdown-item" href="#mechanical-services">Electrical Services</a>
-									<a id="goto-power-and-fuel-services" class="dropdown-item" href="#electrical-services">Power and Fuel Services</a>
-									<a id="goto-it-and-networking-services" class="dropdown-item" href="#power-and-fuel-services">IT and Networking Services</a>
-								</div>
-							</li> -->
 							<li class="nav-item">
 								<a class="nav-link" href="utilities.html#utilities" title="">Utilities</a>
 							</li>
@@ -281,44 +264,6 @@
 	        				</div>
 	        			</div>
 	        		</div>
-	        		<!-- <div class="carousel-item item-7">
-	          			<div class="row">
-	        				<div class="col-lg-6">
-	        					<h2 class="product-carousel-text">Mechanical Services and Spares</h2>
-	        				</div>
-	        				<div class="col-lg-6">
-	        					<table class="table table-hover table-dark table-sm item-7-table">
-									<tr><td class="first-cell">A/C Systems including Central Air Conditioning using Split Duct, Package Chillers and ALL related works such as Ducting, Grills, Attenuators, Piping, etc.</td></tr>
-									<tr><td>Fuel, Water Systems Including all Valves, Solenoid Valves, Float Switches, Level Sensors, Flow Meters </td></tr>
-									<tr><td>Compressors and All Accessories such as Receivers, Dryers, Separators.</td></tr>
-									<tr><td>Secondary Filters and Water Separators</td></tr> 
-									<tr><td>Sound Treatment Systems including Sound Attenuators, Acoustic Louvers, Acoustic Doors</td></tr>
-									<tr><td>Sound Treatment for the Power Houses and All Very Noisy Equipment including Installation of Sound Attenuators and Sound Treatment Linings for the Walls</td></tr>
-									<tr><td>Waste Water Treatment Plants</td></tr>
-									<tr><td>Power Houses including Diesel, Gas Generating Sets, Gas Turbines, Steam Turbines including All related Mechanical Works such as Boilers, Piping Work, Heat Insulations for the Exhaust Piping, Measuring Equipment</td></tr>
-									<tr><td>Production Lines for All Applications in Industrial, Petroleum Sectors including all Steel Frames.</td></tr>
-								</table>
-	        				</div>
-	        			</div>
-	        		</div>
-	        		<div class="carousel-item item-8">
-	          			<div class="row">
-	        				<div class="col-lg-6">
-	        					<h2 class="product-carousel-text">Electrical Services and Spares</h2>
-	        				</div>
-	        				<div class="col-lg-6">
-	        					<table class="table table-hover table-sm item-8-table">
-									<tr><td class="first-cell">Lighting Systems</td></tr>
-									<tr><td>UPS / Battery / Battery Charger</td></tr>
-									<tr><td>Power Factor Correction</td></tr>
-									<tr><td>Isolation Power System</td></tr>
-									<tr><td>Medium Voltage Equipment up to 33 KV such as Switchgears, Package Substations Transformers</td></tr>
-									<tr><td>All Low Voltage, Medium Voltage Cables Including all Cable Trays, Supports, Cable Ties, Cable Tagging, etc</td></tr>
-									<tr><td> Installation of the Power Houses using Diesel Generators High Speed, Medium Speed, Gas Turbine, Steam Turbine, M.V. work up to 33 KV</td></tr>
-								</table>	
-	        				</div>
-	        			</div>
-	        		</div> -->
 	      		</div>	
 	      		<a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
 	        		<span class="carousel-control-prev-icon carousel-control-icon" aria-hidden="true"></span>
@@ -726,11 +671,8 @@
 		</div>
 
 
-		<script type="text/javascript" src="jquery-3.5.1.js"></script>
-		<script type="text/javascript" src="bootstrap-4.5.3/dist/js/bootstrap.bundle.js"></script>		
-
-		<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-    	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
