--- a/utilities.html
+++ b/utilities.html
@@ -9,17 +9,12 @@
 		
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-		
-		<!-- BOOTSTRAP 4 (No INTERNET Version) -->
-		<link rel="stylesheet" type="text/css" href="bootstrap-4.5.3/dist/css/bootstrap.css">
+
 		
 		<link rel="stylesheet" href="css/styles.css">
 		
-		<!-- <script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-		
-		<!-- Font Awesome (No INTERNET Version)-->
-  		<link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
+		<script src="https://kit.fontawesome.com/07adc67c06.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 
 	<body>
@@ -79,107 +74,6 @@
 
 
 		<section id="utilities" class="fade">
-
-			<!-- <nav id="utility-menu">
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-				<ul>
-					<li><a href="" title=""></a>Pipe Calculator</li>
-				</ul>
-			</nav> -->
-			<!-- <div class="row utility-menu">
-				<div class="col-lg-3 utility-menu-button-list">
-					<button id="activate-pipe-calculator" type="button" id="pipe-calculator-button" class="btn btn-outline-light active utility-menu-button">Pipe Calculator</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-pipe-chart" type="button" id="pipe-chart-button" class="btn btn-outline-light utility-menu-button">Pipe Chart</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-steel-sheet-calculator" type="button" class="btn btn-outline-light utility-menu-button">Steel Sheets Calculator</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-round-bars-calculator" type="button" class="btn btn-outline-light utility-menu-button">Round Steel Bars</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-square-steel-bars-calculator" type="button" class="btn btn-outline-light utility-menu-button">Square Steel Bars</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-flat-bars-calculator" type="button" class="btn btn-outline-light utility-menu-button">Flat Bars</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-channels-gost-calculator" type="button" class="btn btn-outline-light utility-menu-button">Channels (GOST)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-channels-upn-calculator" type="button" class="btn btn-outline-light utility-menu-button">Channels (UPN)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-beams-ipn-calculator" type="button" class="btn btn-outline-light utility-menu-button">Beams (IPN)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-beams-ipe-calculator" type="button" class="btn btn-outline-light utility-menu-button">Beams (IPE)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-beams-ipbl-calculator" type="button" class="btn btn-outline-light utility-menu-button">Beams (IPBL/HEA)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-beams-ipb-calculator" type="button" class="btn btn-outline-light utility-menu-button">Beams (IPB/HEB)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-angles-equal-calculator" type="button" class="btn btn-outline-light utility-menu-button">Angles (Equal)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-angles-unequal-calculator" type="button" class="btn btn-outline-light utility-menu-button">Angles (Unequal)</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-hollow-circular-calculator" type="button" class="btn btn-outline-light utility-menu-button">Hollow Circular Structures</button>
-				</div>
-				<div class="col-lg-3 utility-button-list">
-					<button id="activate-hollow-square-calculator" type="button" class="btn btn-outline-light utility-menu-button">Hollow Square Structures</button>
-				</div>
-			</div> -->
 			<div class="row">
 				<div class="col-lg-4 utility-menu">
 					<div class="utility-menu-button-list">
@@ -300,37 +194,6 @@
 												<option value="34">44</option>
 												<option value="35">46</option>
 												<option value="36">48</option>
-												<!-- <option value="37">50</option>
-												<option value="38">52</option>
-												<option value="39">54</option>
-												<option value="40">56</option>
-												<option value="41">58</option>
-												<option value="42">60</option>
-												<option value="43">62</option>
-												<option value="44">64</option>
-												<option value="45">66</option>
-												<option value="46">68</option>
-												<option value="47">70</option>
-												<option value="48">72</option>
-												<option value="49">74</option>
-												<option value="50">76</option>
-												<option value="51">78</option>
-												<option value="52">80</option>
-												<option value="53">82</option>
-												<option value="54">84</option>
-												<option value="55">86</option>
-												<option value="56">88</option>
-												<option value="57">90</option>
-												<option value="58">92</option>
-												<option value="59">94</option>
-												<option value="60">96</option>
-												<option value="61">98</option>
-												<option value="62">100</option>
-												<option value="63">102</option>
-												<option value="64">104</option>
-												<option value="65">106</option>
-												<option value="66">108</option>
-												<option value="67">110</option> -->
 											</select>
 										</div>
 									</div>
@@ -359,12 +222,6 @@
 											<input class="form-control" id="wThickness" type="number" placeholder="Wall Thickness" maxlength="10" required>
 										</div>
 									</div>
-									<!-- <div class="col-sm-6">
-										<div class="form-group">
-											<label id="pl-label">Length (meters)</label>
-											<input class="form-control" id="length" type="number" placeholder="Length" maxlength="10" required>
-										</div>
-									</div> -->
 									<div class="col-sm-12">
 										<div class="form-group">
 											<label id="weight-label">Weight (Kg/m)</label>
@@ -457,17 +314,6 @@
 						<li><a href=""><i class="fab fa-youtube contact-us-icon"></i></a></li>
 					</ul>					
 				</div>
-				<!-- <div class="sec quicklinks">
-					<h2>Quick Links</h2>
-					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Products</a></li>
-						<li><a href="">Services</a></li>
-						<li><a href="">Utilities</a></li>
-
-					</ul>
-				</div> -->
 				<div class="sec contactus">
 					<h2>We're Available At</h2>
 					<ul class="info">
@@ -498,14 +344,10 @@
 		</footer>
 		<div class="copyrightText">
 			<p>Copyright © 2020 Falcon System Commercial Co | Website Designer & Developer - Aymen Sheikh</p>
-		</div>
+		</div>		
 
-
-		<script type="text/javascript" src="jquery-3.5.1.js"></script>
-		<script type="text/javascript" src="bootstrap-4.5.3/dist/js/bootstrap.bundle.js"></script>		
-
-		<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-    	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 
