Fixed Utilities hyperlink

--- a/products_and_services.html
+++ b/products_and_services.html
@@ -57,7 +57,7 @@
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="utilities.html#utilities" title="">Utilities</a>
+								<a class="nav-link" href="utilities.html" title="">Utilities</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#footer" title="">Contact Us</a>
