Added About us dropdown

--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#"><span class="gold-text">Home</span></a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item dropdown">
 								<a class="nav-link" href="about_us.html" title="">About Us</a>
+								<div id="about-us-menu" class="dropdown-menu">
+									<a class="dropdown-item" href="about_us.html">Owner's Message</a>
+									<a class="dropdown-item" href="about_us.html#values">Our Values</a>
+									<a class="dropdown-item" href="about_us.html#vision">Our Vision & Mission</a>
+								</div>
 							</li>
 							
 
