--- a/utilities.html
+++ b/utilities.html
@@ -31,35 +31,49 @@
 							<li class="nav-item">
 								<a class="nav-link" href="index.html#title">Home</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item dropdown">
 								<a class="nav-link" href="about_us.html" title="">About Us</a>
+								<div id="about-us-menu" class="dropdown-menu">
+									<a class="dropdown-item" href="about_us.html">Owner's Message</a>
+									<a class="dropdown-item" href="about_us.html#values">Our Values</a>
+									<a class="dropdown-item" href="about_us.html#vision">Our Vision & Mission</a>
+								</div>
 							</li>
 							
 
-							<li class="nav-item btn-group">
-								<a class="nav-link navbar-dropdown-link" href="products_and_services.html" title="">Products & Services</a>
-								<button type="button" class="nav-link btn dropdown-toggle dropdown-toggle-split dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+							<li class="nav-item dropdown">
+								<a class="nav-link" href="products_and_services.html" title="">Products</a>
 								<div class="dropdown-menu">
 									<!-- NOTE - We are DELIBERATELY REFERENCING the PREVIOUS ELEMENT (in href="link_to_prev_element") because we want the CARD-HEADER to also be visible. Else the CARD-HEADER of the ACCORDION will GO BEHIND the FLOATING NAVBAR -->
-									<p>Products<p>
-									<a id="goto-mechanical-products" class="dropdown-item" href="#our-products-accordion">Mechanical Products</a>
-									<a id="goto-instrumentation-products" class="dropdown-item" href="#mechanical-products">Instrumentation Products</a>
-									<a id="goto-electrical-products" class="dropdown-item" href="#instrumentation-products">Electrical Products</a>
-									<a id="goto-industrial-automation-products" class="dropdown-item" href="#electrical-products">Industrial Automation Products</a>
-									<a id="goto-industrial-automation-solution" class="dropdown-item" href="#industrial-automation-products">Industrial Automation Solution</a>
-									<a id="goto-fire-and-safety" class="dropdown-item" href="#industrial-automation-solution">Fire and Safety Products</a>
-									<a id="goto-it-and-networking" class="dropdown-item" href="#fire-and-safety">IT and Networking Solutions</a>
-									<div class="dropdown-divider"></div>
-									<p>Services</p>
-									<a id="goto-mechanical-services" class="dropdown-item" href="#our-services-accordion">Mechanical Services</a>
-									<a id="goto-electrical-services" class="dropdown-item" href="#mechanical-services">Electrical Services</a>
-									<a id="goto-power-and-fuel-services" class="dropdown-item" href="#electrical-services">Power and Fuel Services</a>
-									<a id="goto-it-and-networking-services" class="dropdown-item" href="#power-and-fuel-services">IT and Networking Services</a>
+									<a id="goto-mechanical-products" class="dropdown-item" href="products_and_services.html#our-products-accordion">Mechanical Products</a>
+									<a id="goto-instrumentation-products" class="dropdown-item" href="products_and_services.html#mechanical-products">Instrumentation Products</a>
+									<a id="goto-electrical-products" class="dropdown-item" href="products_and_services.html#instrumentation-products">Electrical Products</a>
+									<a id="goto-industrial-automation-products" class="dropdown-item" href="products_and_services.html#electrical-products">Industrial Automation Products</a>
+									<a id="goto-industrial-automation-solution" class="dropdown-item" href="products_and_services.html#industrial-automation-products">Industrial Automation Solution</a>
+									<a id="goto-fire-and-safety" class="dropdown-item" href="products_and_services.html#industrial-automation-solution">Fire and Safety Products</a>
+									<a id="goto-it-and-networking" class="dropdown-item" href="products_and_services.html#fire-and-safety">IT and Networking Solutions</a>
 								</div>
 							</li>
 
+							<li class="nav-item dropdown">
+								<a class="nav-link" href="products_and_services.html" title="">Services</a>
+								<div class="dropdown-menu">
+									<a id="goto-mechanical-services" class="dropdown-item" href="products_and_services.html#our-services-accordion">Mechanical Services</a>
+									<a id="goto-electrical-services" class="dropdown-item" href="products_and_services.html#mechanical-services">Electrical Services</a>
+									<a id="goto-power-and-fuel-services" class="dropdown-item" href="products_and_services.html#electrical-services">Power and Fuel Services</a>
+									<a id="goto-it-and-networking-services" class="dropdown-item" href="products_and_services.html#power-and-fuel-services">IT and Networking Services</a>
+								</div>
+							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#" title=""><it class="gold-text">Utilities</it></a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link" href="#partners" title="">Partners</a>
+								<div id="partners-menu" class="dropdown-menu">
+									<a id="goto-partner-azemco" class="dropdown-item" href="#partners">AZEMCO</a>
+									<a id="goto-partner-afco" class="dropdown-item" href="#partners">AFCO</a>
+									<a id="goto-partner-naqsh" class="dropdown-item" href="#partners">NAQSH</a>
+								</div>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#footer" title="">Contact Us</a>
@@ -319,7 +333,7 @@
 					<ul class="info">
 						<li>
 							<span><i class="fas fa-map-marker-alt"></i></span>
-							<p><a href="index.html#map">P.O Box 31301, Al Khobar 31952, Saudi Arabia</a></p>
+							<p><a href="index.html#map">SQ Towers 4<sup>th</sup> Floor Suite #406, Al Khobar 31952, Saudi Arabia</a></p>
 						</li>
 						<li>
 							<span><i class="fas fa-phone"></i></span>
