--- a/utilities.html
+++ b/utilities.html
@@ -70,9 +70,9 @@
 							<li class="nav-item dropdown">
 								<a class="nav-link" href="#partners" title="">Partners</a>
 								<div id="partners-menu" class="dropdown-menu">
-									<a id="goto-partner-azemco" class="dropdown-item" href="#partners">AZEMCO</a>
-									<a id="goto-partner-afco" class="dropdown-item" href="#partners">AFCO</a>
-									<a id="goto-partner-naqsh" class="dropdown-item" href="#partners">NAQSH</a>
+									<a id="goto-partner-azemco" class="dropdown-item" href="index.html#partners">AZEMCO</a>
+									<a id="goto-partner-afco" class="dropdown-item" href="index.html#partners">AFCO</a>
+									<a id="goto-partner-naqsh" class="dropdown-item" href="index.html#partners">NAQSH</a>
 								</div>
 							</li>
 							<li class="nav-item">
