--- a/index.html
+++ b/index.html
@@ -397,19 +397,22 @@
 				<div class="col-lg-12">
 					<h1>Our <span style="color: #bb8c00; font-weight: bold;">Partners</span></h1>
 				</div>
-				<div class="col-lg-4">
-					<div id="partner-afco">
-						<a href=""><img src="images/afco.jpg"></a>
+				<div id="azemco" class="col-lg-4">
+					<div id="partner-img">
+						<a href="https://azzeem.com"><img src="images/azemco.png"></a>
+						<p>For Approved Quality Products Sourcing of Civil / Mechanical / Electrical & Instrumentation / IT & Communication / Fire & Safety</p>
 					</div>
 				</div>
-				<div class="col-lg-4">
-					<div id="partner-afco">
+				<div id="afco" class="col-lg-4">
+					<div id="partner-img">
+						<a href="https://www.afco-saudi.com"><img src="images/afco.png"></a>
+						<p>Civil / Electrical & Instrumentation / Mechanical Services for Residential and Commercial Developments</p>
+					</div>
+				</div>
+				<div id="naqsh" class="col-lg-4">
+					<div id="partner-img">
 						<a href=""><img src="images/naqsh.jpg"></a>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div id="partner-afco">
-						<a href=""><img src="images/azem.jpg"></a>
+						<p>For Full Range of Building Customised Furniture for Residential and Commercial Decor including Fit Out Projects</p>
 					</div>
 				</div>
 			</div>
