Updated utilities layout

--- a/utilities.html
+++ b/utilities.html
@@ -90,54 +90,55 @@
 		<section id="utilities" class="fade">
 			<div class="row">
 				<div class="col-lg-4 utility-menu">
+					<div class="utility-button-list">
+						<button id="activate-pipe-chart" type="button" id="pipe-chart-button" class="btn btn-dark active utility-menu-button">Pipe Chart</button>
+					</div>
 					<div class="utility-menu-button-list">
-					<button id="activate-pipe-calculator" type="button" id="pipe-calculator-button" class="btn btn-dark active utility-menu-button">Pipe Calculator</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-pipe-chart" type="button" id="pipe-chart-button" class="btn btn-dark utility-menu-button">Pipe Chart</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-steel-sheet-calculator" type="button" class="btn btn-dark utility-menu-button">Steel Sheets Calculator</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-round-bars-calculator" type="button" class="btn btn-dark utility-menu-button">Round Steel Bars</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-square-steel-bars-calculator" type="button" class="btn btn-dark utility-menu-button">Square Steel Bars</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-flat-bars-calculator" type="button" class="btn btn-dark utility-menu-button">Flat Bars</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-channels-gost-calculator" type="button" class="btn btn-dark utility-menu-button">Channels (GOST)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-channels-upn-calculator" type="button" class="btn btn-dark utility-menu-button">Channels (UPN)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-beams-ipn-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPN)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-beams-ipe-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPE)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-beams-ipbl-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPBL/HEA)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-beams-ipb-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPB/HEB)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-angles-equal-calculator" type="button" class="btn btn-dark utility-menu-button">Angles (Equal)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-angles-unequal-calculator" type="button" class="btn btn-dark utility-menu-button">Angles (Unequal)</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-hollow-circular-calculator" type="button" class="btn btn-dark utility-menu-button">Hollow Circular Structures</button>
-				</div>
-				<div class="utility-button-list">
-					<button id="activate-hollow-square-calculator" type="button" class="btn btn-dark utility-menu-button">Hollow Square Structures</button>
-				</div>
+						<button id="activate-pipe-calculator" type="button" id="pipe-calculator-button" class="btn btn-dark utility-menu-button">Pipe Calculator</button>
+					</div>
+					
+					<div class="utility-button-list">
+						<button id="activate-steel-sheet-calculator" type="button" class="btn btn-dark utility-menu-button">Steel Sheets Calculator</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-round-bars-calculator" type="button" class="btn btn-dark utility-menu-button">Round Steel Bars</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-square-steel-bars-calculator" type="button" class="btn btn-dark utility-menu-button">Square Steel Bars</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-flat-bars-calculator" type="button" class="btn btn-dark utility-menu-button">Flat Bars</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-channels-gost-calculator" type="button" class="btn btn-dark utility-menu-button">Channels (GOST)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-channels-upn-calculator" type="button" class="btn btn-dark utility-menu-button">Channels (UPN)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-beams-ipn-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPN)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-beams-ipe-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPE)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-beams-ipbl-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPBL/HEA)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-beams-ipb-calculator" type="button" class="btn btn-dark utility-menu-button">Beams (IPB/HEB)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-angles-equal-calculator" type="button" class="btn btn-dark utility-menu-button">Angles (Equal)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-angles-unequal-calculator" type="button" class="btn btn-dark utility-menu-button">Angles (Unequal)</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-hollow-circular-calculator" type="button" class="btn btn-dark utility-menu-button">Hollow Circular Structures</button>
+					</div>
+					<div class="utility-button-list">
+						<button id="activate-hollow-square-calculator" type="button" class="btn btn-dark utility-menu-button">Hollow Square Structures</button>
+					</div>
 				</div>
 				<div class="col-lg-8 utility-item">
 					<div id="pipe-chart">
