--- a/about_us.html
+++ b/about_us.html
@@ -32,7 +32,7 @@
 								<a class="nav-link" href="index.html#title">Home</a>
 							</li>
 							<li class="nav-item dropdown">
-								<a class="nav-link" href="about_us.html" title="">About Us</a>
+								<a class="nav-link" href="about_us.html" title=""><span class="gold-text">About Us</span></a>
 								<div id="about-us-menu" class="dropdown-menu">
 									<a class="dropdown-item" href="">Owner's Message</a>
 									<a class="dropdown-item" href="#values">Our Values</a>
