--- a/utilities.html
+++ b/utilities.html
@@ -68,7 +68,7 @@
 								<a class="nav-link" href="#" title=""><it class="gold-text">Utilities</it></a>
 							</li>
 							<li class="nav-item dropdown">
-								<a class="nav-link" href="#partners" title="">Partners</a>
+								<a class="nav-link" href="index.html#partners" title="">Partners</a>
 								<div id="partners-menu" class="dropdown-menu">
 									<a id="goto-partner-azemco" class="dropdown-item" href="index.html#partners">AZEMCO</a>
 									<a id="goto-partner-afco" class="dropdown-item" href="index.html#partners">AFCO</a>
