--- a/products_and_services.html
+++ b/products_and_services.html
@@ -65,7 +65,7 @@
 								<a class="nav-link" href="utilities.html" title="">Utilities</a>
 							</li>
 							<li class="nav-item dropdown">
-								<a class="nav-link" href="#partners" title="">Partners</a>
+								<a class="nav-link" href="index.html#partners" title="">Partners</a>
 								<div id="partners-menu" class="dropdown-menu">
 									<a id="goto-partner-azemco" class="dropdown-item" href="index.html#partners">AZEMCO</a>
 									<a id="goto-partner-afco" class="dropdown-item" href="index.html#partners">AFCO</a>
