--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
 			</div>
 		</section>
 		
+		<hr id="about-us-divider" class="fade">
 		
 		<section id="certifications" class="fade">
 			<div class="row">
