--- a/index.html
+++ b/index.html
@@ -398,19 +398,19 @@
 					<h1>Our <span style="color: #bb8c00; font-weight: bold;">Partners</span></h1>
 				</div>
 				<div id="azemco" class="col-lg-4">
-					<div id="partner-img">
+					<div class="partner-img">
 						<a href="https://azzeem.com"><img src="images/azemco.png"></a>
 						<p>For Approved Quality Products Sourcing of Civil / Mechanical / Electrical & Instrumentation / IT & Communication / Fire & Safety</p>
 					</div>
 				</div>
 				<div id="afco" class="col-lg-4">
-					<div id="partner-img">
+					<div class="partner-img">
 						<a href="https://www.afco-saudi.com"><img src="images/afco.png"></a>
 						<p>Civil / Electrical & Instrumentation / Mechanical Services for Residential and Commercial Developments</p>
 					</div>
 				</div>
 				<div id="naqsh" class="col-lg-4">
-					<div id="partner-img">
+					<div class="partner-img">
 						<a href=""><img src="images/naqsh.jpg"></a>
 						<p>For Full Range of Building Customised Furniture for Residential and Commercial Decor including Fit Out Projects</p>
 					</div>
@@ -426,12 +426,12 @@
 					<h1>Our <span style="color: #bb8c00; font-weight: bold;">Certifications</span></h1>
 				</div>
 				<div class="col-lg-6 fade">
-					<div id="certification-img">
+					<div class="certification-img">
 						<a href=""><img src="images/maaden.png"></a>
 					</div>
 				</div>
 				<div class="col-lg-6 fade">
-					<div id="certification-img">
+					<div class="certification-img">
 						<a href=""><img src="images/sadara.png"></a>
 					</div>
 				</div>			
