--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<section id="title">
 			<div class="container-fluid">
-				<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+				<nav class="navbar fixed-top navbar-expand-lg navbar-dark shrink-nav">
 					<a class="navbar-brand" href="index.html" style="width: 20rem"><img src="images/falcon_sys_logo.png" class="navbar-logo"><span class="gold-text">Falcon System Commercial Co</span></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle Navigation">
 						<span class="navbar-toggler-icon"></span>
