--- a/index.html
+++ b/index.html
@@ -400,13 +400,13 @@
 				<div id="azemco" class="col-lg-4">
 					<div class="partner-img">
 						<a href="https://azzeem.com"><img src="images/azemco.png"></a>
-						<p>For Approved Quality Products Sourcing of Civil / Mechanical / Electrical & Instrumentation / IT & Communication / Fire & Safety</p>
+						<p>For Approved Quality Products Sourcing of Civil, Mechanical, Electrical & Instrumentation, IT & Communication, Fire & Safety</p>
 					</div>
 				</div>
 				<div id="afco" class="col-lg-4">
 					<div class="partner-img">
 						<a href="https://www.afco-saudi.com"><img src="images/afco.png"></a>
-						<p>Civil / Electrical & Instrumentation / Mechanical Services for Residential and Commercial Developments</p>
+						<p>Civil, Electrical & Instrumentation, Mechanical Services for Residential and Commercial Developments</p>
 					</div>
 				</div>
 				<div id="naqsh" class="col-lg-4">
@@ -427,7 +427,7 @@
 				</div>
 				<div class="col-lg-6 fade">
 					<div class="certification-img">
-						<a href=""><img src="images/maaden.png"></a>
+						<a href=""><img src="images/maaden.jpg"></a>
 					</div>
 				</div>
 				<div class="col-lg-6 fade">
