--- a/utilities.html
+++ b/utilities.html
@@ -52,6 +52,7 @@
 									<a id="goto-industrial-automation-solution" class="dropdown-item" href="products_and_services.html#industrial-automation-products">Industrial Automation Solution</a>
 									<a id="goto-fire-and-safety" class="dropdown-item" href="products_and_services.html#industrial-automation-solution">Fire and Safety Products</a>
 									<a id="goto-it-and-networking" class="dropdown-item" href="products_and_services.html#fire-and-safety">IT and Networking Solutions</a>
+									<a id="goto-machinery_rentals" class="dropdown-item" href="products_and_services.html">Rentals of Heavy Equipments & Machinery</a>
 								</div>
 							</li>
 
