Added Machinery Rentals in Products Dropdown

--- a/products_and_services.html
+++ b/products_and_services.html
@@ -49,6 +49,7 @@
 									<a id="goto-industrial-automation-solution" class="dropdown-item" href="#industrial-automation-products">Industrial Automation Solution</a>
 									<a id="goto-fire-and-safety" class="dropdown-item" href="#industrial-automation-solution">Fire and Safety Products</a>
 									<a id="goto-it-and-networking" class="dropdown-item" href="#fire-and-safety">IT and Networking Solutions</a>
+									<a id="goto-machinery_rentals" class="dropdown-item" href="#">Rentals of Heavy Equipments & Machinery</a>
 								</div>
 							</li>
 
