Added products and services dropdown classes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 							<li class="nav-item dropdown">
 								<a class="nav-link" href="products_and_services.html" title="">Products</a>
-								<div class="dropdown-menu">
+								<div class="dropdown-menu products_dropdown">
 									<!-- NOTE - We are DELIBERATELY REFERENCING the PREVIOUS ELEMENT (in href="link_to_prev_element") because we want the CARD-HEADER to also be visible. Else the CARD-HEADER of the ACCORDION will GO BEHIND the FLOATING NAVBAR -->
 									<a id="goto-mechanical-products" class="dropdown-item" href="products_and_services.html#our-products-accordion">Mechanical Products</a>
 									<a id="goto-instrumentation-products" class="dropdown-item" href="products_and_services.html#mechanical-products">Instrumentation Products</a>
@@ -55,7 +55,7 @@
 
 							<li class="nav-item dropdown">
 								<a class="nav-link" href="products_and_services.html" title="">Services</a>
-								<div class="dropdown-menu">
+								<div class="dropdown-menu services_dropdown">
 									<a id="goto-mechanical-services" class="dropdown-item" href="#our-services-accordion">Mechanical Services</a>
 									<a id="goto-electrical-services" class="dropdown-item" href="#mechanical-services">Electrical Services</a>
 									<a id="goto-power-and-fuel-services" class="dropdown-item" href="#electrical-services">Power and Fuel Services</a>
